--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -44,7 +44,7 @@
 <!-- Start your journey -->
 <section class="container align-content-center py-5 my-4">
   <div class="d-flex flex-column text-center gap-2 py-2">
-    <h2>Start your journey</h2>
+    <h2>Start Your Journey</h2>
     <h6>We empower financial independence with solutions and mentorship.</h6>
   </div>
 
@@ -52,7 +52,7 @@
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
         <img ngSrc="assets/images/family1.webp" alt="Family spending time together"
-          title="Build and secure your wealth." class="img-fluid p-2" width="1024" height="684" priority/>
+          title="Build and secure your wealth." class="img-fluid p-2" width="1024" height="684" priority />
         <mat-card-content class="my-4">
           <h5>
             Build and secure your wealth.
@@ -64,7 +64,8 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
-        <img ngSrc="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid p-2" width="1024" height="684" priority />
+        <img ngSrc="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid p-2" width="1024" height="684"
+          priority />
         <mat-card-content class="my-4">
           <h5>
             Start a business
@@ -76,7 +77,8 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
-        <img ngSrc="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid p-2" width="1024" height="684" priority />
+        <img ngSrc="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid p-2" width="1024" height="684"
+          priority />
         <mat-card-content class="my-4">
           <h5>
             Donate and contribute
@@ -100,85 +102,72 @@
   </section>
 </div>
 
-<!-- Start Shaping Your Financial Future  -->
-<div class="py-5 bg-accent-200">
-  <section class="container align-content-center">
-    <div class="row">
-      <div class="col-4 d-none d-md-block">
-        <img ngSrc="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
-      </div>
-      <div class="col-12 col-md-8">
-        <div class="d-flex flex-column gap-2 py-2">
-          <h2>$68 Trillion</h2>
-          <h6>Generational Wealth is In Motion</h6>
-        </div>
-        <p class="text-body">
-          The colossal exchange of $68 trillion in generational wealth represents a tremendous opportunity to reshape
-          individuals’ financial futures.
-        </p>
-      </div>
+<section class="container align-content-center my-5">
+  <!-- Start Shaping Your Financial Future  -->
+  <div class="row align-items-center h-100">
+    <div class="col-6 d-none d-md-block">
+      <img ngSrc="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
     </div>
-  </section>
-</div>
-
-<!-- Protect What Matters Most  -->
-<div class="py-5 bg-accent-200">
-  <section class="container align-content-center">
-    <div class="row">
-      <div class="col-12 col-md-8">
-        <div class="d-flex flex-column gap-2 py-2">
-          <h2>4.5 Billion</h2>
-          <h6>People are Financially Illiterate</h6>
-        </div>
-        <p class="text-body">
-          The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for
-          financial guidance and support.
-        </p>
+    <div class="col-12 col-md-6" id="stat-card">
+      <div class="d-flex flex-column gap-2 py-2">
+        <h2>$68 Trillion</h2>
+        <h6 class="mt-2">Generational Wealth is In Motion</h6>
       </div>
-      <div class="col-4 d-none d-md-block">
-        <img ngSrc="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
-      </div>
+      <p class="text-body mt-2">
+        The colossal exchange of $68 trillion in generational wealth represents a tremendous opportunity to reshape
+        individuals’ financial futures.
+      </p>
     </div>
-  </section>
-</div>
-
-<!-- Begin your journey -->
-<section class="container align-content-center py-5 my-4">
-  <div class="d-flex flex-column gap-2 py-2">
-    <h2>Begin your journey with GFC</h2>
-    <h6>Begin your success with our expert services and guidance.</h6>
   </div>
-  <div class="row py-5">
-    <div class="col-12 col-xl-8">
-      <div class="row">
-        <div class="col-12 col-sm-6 my-4">
-          <h4 class="mb-2">Financial Education</h4>
-          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
-            decision-making.</p>
-        </div>
-        <div class="col-12 col-sm-6 my-4">
-          <h4 class="mb-2">Expert Guidance</h4>
-          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
-            decision-making.</p>
-        </div>
-        <div class="col-12 col-sm-6 my-4">
-          <h4 class="mb-2">Diverse Financial Products and Solutions</h4>
-          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
-            decision-making.</p>
-        </div>
-        <div class="col-12 col-sm-6 my-4">
-          <h4 class="mb-2">Customized Strategies</h4>
-          <p class="text-body">Access valuable financial education resources to enhance your knowledge and
-            decision-making.</p>
-        </div>
-      </div>
-    </div>
 
-    <div class="d-none d-xl-block col-xl-4">
-      <img ngSrc="assets/images/family3.webp" alt="Placeholder Image" class="img-fluid"  width="1024" height="684" />
+  <!-- Protect What Matters Most  -->
+  <div class="row align-items-center h-100 mt-5">
+    <div class="col-12 col-md-6" id="stat-card">
+      <div class="d-flex flex-column gap-2 py-2">
+        <h2>4.5 Billion</h2>
+        <h6 class="mt-2">People are Financially Illiterate</h6>
+      </div>
+      <p class="text-body mt-2">
+        The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for
+        financial guidance and support.
+      </p>
+    </div>
+    <div class="col-6 d-none d-md-block">
+      <img ngSrc="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
     </div>
   </div>
 </section>
+
+<!-- Begin your journey -->
+<section class="container align-content-center py-5">
+  <div class="row">
+    <div class="col-12 col-lg-8">
+      <div class="d-flex flex-column gap-2 py-2">
+        <h2 class="text-center text-md-start">Begin Your Journey With GFC</h2>
+        <h6 class="text-center text-md-start">Begin your success with our expert services and guidance.</h6>
+      </div>
+      <div class="row py-5">
+        @for (item of JourneyStartPoints; track item.title) {
+        <div class="col-12 col-sm-6 py-1 py-md-2 d-flex">
+          <div class="border border-accent-500 rounded-2 p-3 shadow-hover w-100">
+            <div class="d-flex">
+              <lucide-icon [name]="item.image" class="me-2"></lucide-icon>
+              <div>
+                <p class="fs-6 lh-sm fw-medium m-0"><b>{{item.title}}</b></p>
+                <p class="mt-2" style="color: #a6a6a7">{{item.description}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        }
+      </div>
+    </div>
+    <div class="d-none d-lg-block col-lg-4 d-flex">
+      <img ngSrc="assets/images/family3.webp" alt="Placeholder Image" class="img-fluid h-100 object-fit-cover" width="1024" height="684" />
+    </div>
+  </div>
+</section>
+
 
 <!-- Your wealth, our mission -->
 <div class="bg-accent-100 py-5">
