--- a/src/app/modules/landing/components/footer/footer.component.html
+++ b/src/app/modules/landing/components/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer class="container-fluid bg-primary-900">
   <div class="row justify-content-center p-5">
-    <div class="col-8 col-md-4 order-4 order-md-1 d-flex flex-column">
-      <img ngSrc="../../../assets/images/logo-white-complete.png" alt="gfc logo"
-      class="img-fluid" width="163" height="100">
-
+    <div class="col-8 col-md-4 order-4 order-md-1 d-flex flex-column justify-content-center align-items-center">
+      <img src="assets/images/logo-white-complete.png" alt="gfc logo"
+        class="img-fluid mb-3" width="163" height="100" loading="lazy">
+    
       <div class="d-flex flex-column gap-3 px-4 mx-4">
         <div class="d-flex align-content-center gap-2">
           <mat-icon class="text-white">location_on</mat-icon>
-          <span class="text-white">3333 Michelson Dr suite 300 Irvine CA 92618</span>
+          <span class="text-white">3333 Michelson Dr suite 300 Irvine CA 92618</span>
         </div>
         <div class="d-flex align-content-center gap-2">
           <mat-icon class="text-white">phone</mat-icon>
