--- a/src/app/modules/landing/pages/home/home.component.css
+++ b/src/app/modules/landing/pages/home/home.component.css
@@ -31,6 +31,28 @@
     border-right: 2px solid var(--primary-900)
 }
 
+.hoverable-card {
+    transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transform: scale(1);
+    cursor: pointer;
+}
+
 .hoverable-card:hover {
     background-color: var(--primary-50);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+}
+
+#stat-card h2 {
+    font-size: clamp(3rem, 8vw, 4.5rem) !important;
+    line-height: 1 !important;
+    font-weight: 700 !important; 
+}
+
+#stat-card h6 {
+    font-size: clamp(1.25rem, 8vw, 1.5rem) !important;
+    line-height: 1.75rem !important;
+    color: var(--primary-500) !important;
+    font-weight: 600 !important; 
 }
