--- a/src/app/modules/landing/pages/services/services.component.css
+++ b/src/app/modules/landing/pages/services/services.component.css
@@ -28,6 +28,7 @@
 }
 
 .slider{
+    display: flex;
     width: 100%;
     height: var(--height);
     overflow: hidden;
@@ -49,18 +50,21 @@
     height: var(--height);
     position: absolute;
     left: 100%;
-    animation: autoRun 30s linear infinite;
+    animation: autoRun 40s linear infinite;
     transition: filter 0.5s;
-    animation-delay: calc( (30s / var(--quantity)) * (var(--position) - 1) - 30s)!important;
+    animation-delay: calc( (40s / var(--quantity)) * (var(--position) - 1) - 40s)!important;
 }
 .slider .list .item img{
     width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 0;
 }
 @keyframes autoRun{
     from{
         left: 100%;
     }to{
-        left: calc(var(--width) * -1);
+        left: calc(var(--width) * -10);
     }
 }
 .slider:hover .item{
