--- a/src/app/modules/landing/components/general-form/general-form.component.html
+++ b/src/app/modules/landing/components/general-form/general-form.component.html
@@ -77,7 +77,9 @@
           <app-additional-form (onFormCompleted)="onAdditionalFormCompleted($event)"></app-additional-form>
 
           <div class="d-flex justify-content-end gap-4 mt-4">
-            <button mat-button type="button" (click)="onReturnClicked()">Back</button>
+            <ng-container *ngIf="!isContact">
+              <button mat-button type="button" (click)="onReturnClicked()">Back</button>
+            </ng-container>
             <button mat-raised-button type="submit" [disabled]="!isGeneralFormValid">
               <mat-icon fontIcon="send" iconPositionEnd></mat-icon>
               Send
