--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -33,8 +33,8 @@
                     </button>
                 </span>
                 <!-- Logo -->
-                    <img ngSrc="assets/images/logo-white-complete.webp" alt="gfc logo"
-                        class="img-fluid" priority width="100" height="61" >
+                <img ngSrc="assets/images/logo-white-complete.webp" alt="gfc logo" class="img-fluid" priority
+                    width="100" height="61">
                 <!-- <span class="toolbar-spacer"></span> -->
                 <!-- Menu -->
                 <mat-nav-list class="d-none d-lg-flex gap-2">
@@ -58,5 +58,78 @@
 
         <!-- Main content -->
         <router-outlet></router-outlet>
+
+        <footer class="container-fluid bg-primary-900">
+            <div class="row justify-content-center p-5">
+                <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center text-md-start">
+                    <img src="../../../assets/images/logo-white-complete.png" alt="GFC logo" class="img-fluid mb-4"
+                        width="163" height="100" loading="lazy">
+
+                    <div class="d-flex flex-column gap-3 px-3">
+                        <div class="d-flex align-items-center gap-2">
+                            <mat-icon class="text-white">location_on</mat-icon>
+                            <span class="text-white">3333 Michelson Dr suite 300 Irvine CA 92618</span>
+                        </div>
+                        <div class="d-flex align-items-center gap-2">
+                            <mat-icon class="text-white">phone</mat-icon>
+                            <span class="text-white">+52 626 922 1620</span>
+                        </div>
+                        <div class="d-flex align-items-center gap-2">
+                            <mat-icon class="text-white">mail</mat-icon>
+                            <span class="text-white">Joe&#64;catalystleadershipgrp.com</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-2 order-1 mt-4 mt-md-0">
+                    <div class="px-3 text-white text-uppercase">Quick Links</div>
+                    <mat-nav-list role="NavigationList">
+                        @for (item of NavigationItems; track item.displayName) {
+                        <ng-container *ngIf="item.isActive">
+                            <mat-list-item [routerLink]="item.link">
+                                {{item.displayName}}
+                            </mat-list-item>
+                        </ng-container>
+                        } @empty {
+                        <mat-list-item>There are no items.</mat-list-item>
+                        }
+                    </mat-nav-list>
+                </div>
+
+                <div class="col-6 col-md-2 order-2 mt-4 mt-md-0">
+                    <div class="px-3 text-white text-uppercase">Social Media</div>
+                    <mat-nav-list role="SocialMediaList">
+                        @for (item of SocialMediaItems; track item.displayName) {
+                        <ng-container *ngIf="item.isActive">
+                            <mat-list-item (click)="redirectTo(item.link)">
+                                {{item.displayName}}
+                            </mat-list-item>
+                        </ng-container>
+                        } @empty {
+                        <mat-list-item>There are no items.</mat-list-item>
+                        }
+                    </mat-nav-list>
+                </div>
+
+                <div class="col-12 col-md-4 order-3 mt-4 mt-md-0">
+                    <div class="text-white text-uppercase">Get Updates</div>
+                    <div class="text-white mt-3">
+                        Welcome to Finxpert, Signup For Our
+                        Latest news & Article. We Won't give you
+                        spam mail and irrevelevnt messages.
+                    </div>
+                    <mat-form-field appearance="outline" class="mt-4">
+                        <mat-label>Enter your email address</mat-label>
+                        <input matInput type="mail" placeholder="example@mail.com">
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <div class="row bg-black py-3">
+                <div class="d-flex justify-content-center text-white">
+                    © 2024 GFI Catalyst. All rights reserved
+                </div>
+            </div>
+        </footer>
     </mat-drawer-content>
 </mat-drawer-container>
