--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -65,7 +65,8 @@
 
     <div class="col-12 mt-3 text-center d-lg-none d-block">
         <img mat-card-image ngSrc="assets/images/business1.webp" alt="Business Woman"
-            title="Build and secure your wealth." class="img-fluid rounded-3" width="720" height="1080" loading="lazy" />
+            title="Build and secure your wealth." class="img-fluid rounded-3" width="720" height="1080"
+            loading="lazy" />
     </div>
 
     <div class="row mt-lg-5 mt-3 align-items-stretch">
@@ -86,7 +87,8 @@
 
         <div class="col-4 text-center d-none d-lg-block">
             <img mat-card-image ngSrc="assets/images/business4.webp" alt="Business Woman"
-                title="Build and secure your wealth." class="img-fluid rounded-3 " width="720" height="1080" loading="lazy"/>
+                title="Build and secure your wealth." class="img-fluid rounded-3 " width="720" height="1080"
+                loading="lazy" />
         </div>
 
         <div class="col-lg-4 col-12">
@@ -144,7 +146,8 @@
             <div class="col mb-2 mb-lg-0 d-flex">
                 <div class="">
                     <div class="">
-                        <img ngSrc={{item.image}} alt="Placeholder Image" class="img-fluid rounded-3" width="1024" height="684" loading="lazy" />
+                        <img ngSrc={{item.image}} alt="Placeholder Image" class="img-fluid rounded-3" width="1024"
+                            height="684" loading="lazy" />
                     </div>
                     <p class="mt-2 text-body" style="color: white !important;">{{item.description}}</p>
                 </div>
@@ -220,7 +223,8 @@
         <h2 class="text-center">Getting Started Is Easy</h2>
     </div>
     <div class="row mt-4 position-relative">
-        <div class="d-none d-md-block position-absolute start-50 top-50 translate-middle bg-secondary-100" style="width: 80%; height: 4px; z-index: 0;"></div>
+        <div class="d-none d-md-block position-absolute start-50 top-50 translate-middle bg-secondary-100"
+            style="width: 80%; height: 4px; z-index: 0;"></div>
         @for (item of StartingPoints; track item.description) {
         <div class="col-12 col-md position-relative d-flex mt-2 mt-lg-0">
             <div class="bg-primary-50 p-3 rounded-2 mt-3">
@@ -228,7 +232,8 @@
                     <p class="p-2 bg-primary-800 text-white rounded-1">{{item.step}}</p>
                 </span>
                 <div class="mt-3">
-                    <img ngSrc={{item.image}} alt="Placeholder Image" class="img-fluid rounded-3" width="1024" height="684" loading="lazy" />
+                    <img ngSrc={{item.image}} alt="Placeholder Image" class="img-fluid rounded-3" width="1024"
+                        height="684" loading="lazy" />
                 </div>
                 <div class="mt-2">
                     <p class="text-body" style="white-space: pre-line;"><b>{{item.title}}</b></p>
@@ -287,28 +292,25 @@
 <!-- FAQs -->
 <div class="py-5 bg-primary-900">
     <section class="container align-content-center py-4">
-      <div class="row">
-        <div class="col-12 col-md-3 text-center py-2">
-          <h2 class="text-white">FAQs</h2>
-        </div>
-  
-        <div class="col-12 col-md-9">
-          <mat-accordion>
-            @for (item of FaqsItems; track item.title) {
-            <mat-expansion-panel class="mat-elevation-z0 border-bottom">
-              <mat-expansion-panel-header>
-                <mat-panel-title class="text-white"> {{item.title}} </mat-panel-title>
-              </mat-expansion-panel-header>
-              <p class="text-white">{{item.description}}</p>
-            </mat-expansion-panel>
-            } @empty {
-            <li>There are no items.</li>
-            }
-          </mat-accordion>
-        </div>
-      </div>
-    </section>
-  </div>
-  
+        <div class="row">
+            <div class="col-12 col-md-3 text-center py-2">
+                <h2 class="text-white">FAQs</h2>
+            </div>
 
-<app-footer></app-footer>
+            <div class="col-12 col-md-9">
+                <mat-accordion>
+                    @for (item of FaqsItems; track item.title) {
+                    <mat-expansion-panel class="mat-elevation-z0 border-bottom">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="text-white"> {{item.title}} </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <p class="text-white">{{item.description}}</p>
+                    </mat-expansion-panel>
+                    } @empty {
+                    <li>There are no items.</li>
+                    }
+                </mat-accordion>
+            </div>
+        </div>
+    </section>
+</div>
