--- a/src/app/modules/landing/pages/contact/contact.component.css
+++ b/src/app/modules/landing/pages/contact/contact.component.css
@@ -1,7 +1,28 @@
 .sub-hero {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.6),
-        rgba(0, 0, 0, 0.3)
-      ), url('/assets/images/hero.jfif');
+  background-image: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.3)), url('/assets/images/hero.jfif');
+}
+
+.cta {
+  background-image: url('/assets/images/hero.jfif');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 40dvh;
+  position: relative;
+}
+
+.cta-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(3, 27, 57, 0.5);
+}
+
+.cta-content {
+  position: relative;
+  z-index: 2;
 }
