--- a/src/app/modules/landing/pages/contact/contact.component.html
+++ b/src/app/modules/landing/pages/contact/contact.component.html
@@ -8,7 +8,9 @@
 
         <div class="row mt-3">
             <h5 class="col-12 col-md-7 text-white ">
-                We're here to help you protect what matters most. Whether you have questions, need assistance, or want to explore coverage options, our team at Global Financial Impact is ready to assist. Contact us today and take the first step toward securing your future.
+                We're here to help you protect what matters most. Whether you have questions, need assistance, or want
+                to explore coverage options, our team at Global Financial Impact is ready to assist. Contact us today
+                and take the first step toward securing your future.
             </h5>
         </div>
 
@@ -20,128 +22,55 @@
     </div>
 </section>
 
-<!-- Contact form -->
 <section class="container align-content-center py-5 my-4">
+    <div class="d-flex flex-column text-center gap-2 py-2">
+        <h2>Start your journey</h2>
+        <h6>We empower financial independence with solutions and mentorship.</h6>
+    </div>
 
-    <div class="row">
-        <div class="row col-12 col-md-6">
-            <div class="d-flex flex-column text-center py-2">
-                <h2>Get in touch now!</h2>
-            </div>
-            <!-- Phone number -->
-            <div class="col-12 col-md-6 py-3">
-                <mat-card class="h-100" appearance="outlined" class="transparent">
-                    <mat-card-content class="my-4 text-center">
-                        <div class="d-flex justify-content-center">
-                            <mat-icon fontIcon="phone" class="medium secondary-600"></mat-icon>
-                        </div>
-                        <h4 class="mt-3">
-                            Phone number
-                        </h4>
-                        <p class="text-body mt-3">+52 626 922 1620</p>
-                    </mat-card-content>
-                </mat-card>
-            </div>
+    <app-general-form [isContact]="true" (onFormCompleted)="onGeneralFormCompleted($event)">
+    </app-general-form>
+</section>
 
-            <!-- Email -->
-            <div class="col-12 col-md-6 py-3">
-                <mat-card class="h-100" appearance="outlined" class="transparent">
-                    <mat-card-content class="my-4 text-center">
-                        <div class="d-flex justify-content-center">
-                            <mat-icon fontIcon="mail" class="medium secondary-600"></mat-icon>
-                        </div>
-                        <h4 class="mt-3">
-                            Email
-                        </h4>
-                        <p class="text-body mt-3">Joe&#64;catalystleadershipgrp.com</p>
-                    </mat-card-content>
-                </mat-card>
-            </div>
+<section class="container align-content-center py-5 my-4">
+    <div class="d-flex flex-column text-center gap-2 py-2">
+        <h2>More Ways to Connect</h2>
+        <h6>Reach out to Global Financial Impact anytime through social media, email, or a quick message.</h6>
+    </div>
 
-            <!-- Location -->
-            <div class="col-12 col-md-6 py-3">
-                <mat-card class="h-100" appearance="outlined" class="transparent">
-                    <mat-card-content class="my-4 text-center">
-                        <div class="d-flex justify-content-center">
-                            <mat-icon fontIcon="location_on" class="medium secondary-600"></mat-icon>
-                        </div>
-                        <h4 class="mt-3">
-                            Location
-                        </h4>
-                        <p class="text-body mt-3">3333 Michelson Dr suite 300 Irvine CA 92618</p>
-                    </mat-card-content>
-                </mat-card>
-            </div>
-
-            <!-- Working hours -->
-            <div class="col-12 col-md-6 py-3">
-                <mat-card class="h-100" appearance="outlined" class="transparent">
-                    <mat-card-content class="my-4 text-center">
-                        <div class="d-flex justify-content-center">
-                            <mat-icon fontIcon="timer" class="medium secondary-600"></mat-icon>
-                        </div>
-                        <h4 class="mt-3">
-                            Working hours
-                        </h4>
-                        <p class="text-body mt-3">?</p>
-                    </mat-card-content>
-                </mat-card>
+    <div class="row row-cols-2 row-cols-md-4 py-5">
+        @for (item of ContactInfo; track item.title) {
+        <div class="py-1 py-md-2 d-flex justify-content-center align-items-center">
+            <div
+                class="d-flex flex-column justify-content-center align-items-center border border-accent-500 rounded-2 p-3 shadow-hover w-100 h-100">
+                <div class="d-flex justify-content-center align-items-center mb-2 bg-primary-50 p-2 rounded-5">
+                    <lucide-icon [name]="item.image" size="30" class="text-primary-700"></lucide-icon>
+                </div>
+                <div class="text-center">
+                    <p class="fs-6 lh-sm fw-medium m-0 text-primary-900">{{item.title}}</p>
+                    <p class="mt-2" style="color: #a6a6a7">{{item.description}}
+                    </p>
+                </div>
             </div>
         </div>
+        }
+    </div>
+</section>
 
-        <div class="col-12 col-md-6">
-            <mat-card class="bg-primary-800 h-100">
-                <form>
-                    <mat-card-header>
-                        <h6>Contact Now</h6>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <div class="row">
-                            <div class="col-12 col-md-6">
-                                <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>First Name</mat-label>
-                                    <input matInput>
-                                </mat-form-field>
-                            </div>
+<!-- CTA -->
+<section class="cta d-flex align-items-center justify-content-start">
+    <div class="cta-overlay"></div>
+    <div class="cta-content mx-5 w-100">
+        <div class="row">
+            <h2 class="col-12 col-md-7 text-white">Step Into A Brighter Future</h2>
+        </div>
 
-                            <div class="col-12 col-md-6">
-                                <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>Last Name</mat-label>
-                                    <input matInput>
-                                </mat-form-field>
-                            </div>
-
-                            <div class="col-12 col-md-6">
-                                <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>E-mail</mat-label>
-                                    <input matInput>
-                                </mat-form-field>
-                            </div>
-
-                            <div class="col-12 col-md-6">
-                                <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>Phone</mat-label>
-                                    <input matInput>
-                                </mat-form-field>
-                            </div>
-
-                            <div class="col-12">
-                                <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>Message</mat-label>
-                                    <input matInput>
-                                </mat-form-field>
-                            </div>
-                        </div>
-                    </mat-card-content>
-
-                    <mat-card-actions align="end">
-                        <button mat-raised-button type="submit">
-                            <mat-icon fontIcon="send" iconPositionEnd></mat-icon>
-                            Send
-                        </button>
-                    </mat-card-actions>
-                </form>
-            </mat-card>
+        <div class="row mt-3">
+            <p class="col-12 col-md-7 text-white">
+                You deserve the power to shape your financial future, turning your dreams into reality and leaving a
+                lasting
+                impact on your life and the lives of others.
+            </p>
         </div>
     </div>
 </section>
