--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -119,25 +119,26 @@
       </p>
     </div>
   </div>
-
-  <!-- Protect What Matters Most  -->
-  <div class="row align-items-center h-100 mt-5">
-    <div class="col-12 col-md-6" id="stat-card">
-      <div class="d-flex flex-column gap-2 py-2">
-        <h2>4.5 Billion</h2>
-        <h6 class="mt-2">People are Financially Illiterate</h6>
-      </div>
-      <p class="text-body mt-2">
-        The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for
-        financial guidance and support.
-      </p>
-    </div>
-    <div class="col-6 d-none d-md-block">
-      <img ngSrc="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
-    </div>
-  </div>
 </section>
 
+<section class="container align-content-center my-5">
+    <!-- Protect What Matters Most  -->
+    <div class="row align-items-center h-100 mt-5">
+      <div class="col-12 col-md-6" id="stat-card">
+        <div class="d-flex flex-column gap-2 py-2">
+          <h2>4.5 Billion</h2>
+          <h6 class="mt-2">People are Financially Illiterate</h6>
+        </div>
+        <p class="text-body mt-2">
+          The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for
+          financial guidance and support.
+        </p>
+      </div>
+      <div class="col-6 d-none d-md-block">
+        <img ngSrc="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
+      </div>
+    </div>
+</section>
 <!-- Begin your journey -->
 <section class="container align-content-center py-5">
   <div class="row">
@@ -213,5 +214,3 @@
     </div>
   </section>
 </div>
-
-<app-footer></app-footer>
