--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="row mt-5">
-            <button mat-raised-button color="accent" class="col-auto">
+            <button mat-raised-button type="button" color="accent" class="col-auto" (click)="navigateToLink('get-started')">
                 Grow with Us
             </button>
         </div>
@@ -55,7 +55,7 @@
         }
     </div>
     <div class="d-flex justify-content-center align-content-center mt-2">
-        <button mat-raised-button>Join our team</button>
+        <button mat-raised-button type="button" (click)="navigateToLink('get-started')">Join our team</button>
     </div>
 </section>
 
@@ -126,9 +126,9 @@
     </div>
 
     <!-- Botón centrado debajo -->
-    <div class="row mt-3">
-        <div class="col text-center">
-            <button mat-flat-button class="w-lg-50 w-100">Join our team</button>
+    <div class="row d-flex justify-content-center mt-3">
+        <div class="col-auto">
+            <button mat-flat-button class="w-lg-50 w-100" (click)="navigateToLink('get-started')">Join our team</button>
         </div>
     </div>
 
