--- a/src/app/modules/landing/pages/contact/contact.component.html
+++ b/src/app/modules/landing/pages/contact/contact.component.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="row mt-5">
-            <button mat-raised-button color="accent" class="col-auto">
+            <button mat-raised-button type="button" color="accent" class="col-auto" (click)="redirectToCalendly()">
                 Schedule a Consultation
             </button>
         </div>
