fix: changed gfi texts to gfc

--- a/src/app/modules/landing/components/additional-form/additional-form.component.html
+++ b/src/app/modules/landing/components/additional-form/additional-form.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="col-12">
-      <mat-checkbox formControlName="has_consent">I hereby consent to receive calls from or on behalf of GFI Agency at
+      <mat-checkbox formControlName="has_consent">I hereby consent to receive calls from or on behalf of GFC Agency at
         the telephone number provided above. I understand that consent is not a condition of purchase.</mat-checkbox>
     </div>
   </div>
