--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -60,7 +60,7 @@
 </section>
 
 <section class="container py-5 my-4">
-    <h6 class="text-secondary-600 text-center">THE GFI DIFFERENCE</h6>
+    <h6 class="text-secondary-600 text-center">THE GFC DIFFERENCE</h6>
     <h2 class="text-center">Inspirational Marketing</h2>
 
     <div class="col-12 mt-3 text-center d-lg-none d-block">
@@ -139,7 +139,7 @@
     <section class="container align-content-center py-5 my-4">
         <div class="d-flex flex-column gap-2 py-2">
             <h6 class="text-secondary-600 text-center">Where Dreams Turn To Impact</h6>
-            <h2 class="text-center text-white">Welcome to the GFI Family</h2>
+            <h2 class="text-center text-white">Welcome to the GFC Family</h2>
         </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mt-5 h-100">
             @for (item of ImpactOptions; track item.description) {
@@ -182,8 +182,8 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="d-flex flex-column gap-2 py-2">
-                    <h2 class="text-white">6 Ways To Partner With GFI</h2>
-                    <p>Discover the diverse pathways to partner with GFI based on your aspirations and interests.
+                    <h2 class="text-white">6 Ways To Partner With GFC</h2>
+                    <p>Discover the diverse pathways to partner with GFC based on your aspirations and interests.
                         Whether
                         you
                         envision becoming a client, embarking on a part-time venture, diving into being an agency owner,
