--- a/src/app/modules/landing/pages/services/services.component.html
+++ b/src/app/modules/landing/pages/services/services.component.html
@@ -31,7 +31,7 @@
         <h2>Start Shaping Your Financial Future</h2>
       </div>
       <p class="text-body">
-        GFI offers a comprehensive range of financial solutions tailored to meet the diverse needs of individuals,
+        GFC offers a comprehensive range of financial solutions tailored to meet the diverse needs of individuals,
         families, and businesses. We believe in an approach to financial well-being that encompasses wealth creation,
         protection, and transfer.
       </p>
