--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -127,7 +127,7 @@
 
             <div class="row bg-black py-3">
                 <div class="d-flex justify-content-center text-white">
-                    © 2024 GFI Catalyst. All rights reserved
+                    © 2024 GFC Catalyst. All rights reserved
                 </div>
             </div>
         </footer>
