--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -197,7 +197,7 @@
 
   <!-- Joe's Quote -->
   <section class="container pt-3 pb-5 d-flex justify-content-center align-items-center">
-    <div class="row col-lg-10 col-12 border border-accent-500 shadow-lg p-3 fst-italic">
+    <div class="row col-lg-10 col-12 border border-accent-500 shadow-lg rounded-2 p-3 fst-italic">
       <div class="col-lg-4 col-12 d-flex d-lg-block justify-content-center">
         <img ngSrc="assets/images/GFC-CEO.webp" alt="Placeholder Image" class="img-fluid w-lg-75 w-25 mb-2 mb-lg-0" width="400" height="384"
           style="border-radius: 50%;" />
